<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/iron_ligth"
    tools:context=".activities.MedicoPerfilActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/gradientbackground"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/spacing_small"
            android:background="@drawable/circular_border_imageview"
            android:src="@drawable/ic_person_white_96dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Dr. Juan Perez"
            style="@style/ContentTextTitulo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Medico General"
            android:textColor="@color/white"
            style="@style/ContentTextHorario" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Lun. a Vie. 07:00 hs a 18:00hs"
            android:textStyle="bold"
            android:textColor="@color/textPrimary"
            style="@style/ContentTextHorario" />

    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="367dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/materialCardView"
        app:layout_constraintGuide_percent="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <android.support.design.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/card_blanco"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consultas"
                    style="@style/ContentCardProfile" />

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/ic_library_add_accent_24dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agendarme"
                    style="@style/ContentCardProfile" />

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/ic_library_add_accent_24dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favoritos"
                    style="@style/ContentCardProfile" />

                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@drawable/ic_star_yellow_24dp"/>

            </LinearLayout>
        </LinearLayout>


    </android.support.design.card.MaterialCardView>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView">


        <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/home_terminos"
            style="@style/ContentTextHorario"/>


    </ScrollView>


</android.support.constraint.ConstraintLayout>