<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistroActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <TextView
        android:id="@+id/textView"
        style="@style/ContentTextInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/registro_ingresar_con"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineToolbar" />

    <!-- card facebook-->
    <android.support.design.card.MaterialCardView
        android:id="@+id/card_regitro_facebook"
        style="@style/card_facebook"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

    </android.support.design.card.MaterialCardView>

    <TextView
        android:id="@+id/text_registro_facebook"
        style="@style/ContentTextInicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="10dp"
        android:text="@string/registro_facebbok"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintTop_toTopOf="@+id/card_regitro_facebook" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginBottom="8dp"
        android:contentDescription="@string/inicio_uno"
        android:elevation="@dimen/elevarion_card"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toEndOf="@+id/card_regitro_facebook"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="@+id/guideline13"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_white_48dp" />

    <ImageView
        android:id="@+id/image_facebbok"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/inicio_uno"
        android:elevation="@dimen/elevarion_card"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@+id/card_regitro_facebook"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@+id/card_regitro_facebook"
        app:layout_constraintTop_toTopOf="@+id/card_regitro_facebook"
        app:layout_constraintVertical_bias="0.533" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />


    <!-- card gmail-->
    <android.support.design.card.MaterialCardView
        android:id="@+id/card_registro_gmail"
        style="@style/card_inicio2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline14">

    </android.support.design.card.MaterialCardView>

    <TextView
        android:id="@+id/text_registro_gmail"
        style="@style/ContentTextInicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="10dp"
        android:text="@string/registro_gmail"
        app:layout_constraintBottom_toTopOf="@+id/guideline15"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintTop_toTopOf="@+id/card_registro_gmail" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/inicio_uno"
        android:elevation="@dimen/elevarion_card"
        android:src="@drawable/ic_keyboard_arrow_right_white_48dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_registro_gmail"
        app:layout_constraintEnd_toEndOf="@+id/card_registro_gmail"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="@+id/card_registro_gmail" />

    <ImageView
        android:id="@+id/image_avatar_uno"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/inicio_uno"
        android:elevation="@dimen/elevarion_card"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@+id/card_registro_gmail"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@+id/card_registro_gmail"
        app:layout_constraintTop_toTopOf="@+id/card_registro_gmail" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <!-- card solumen-->
    <android.support.design.card.MaterialCardView
        android:id="@+id/card_regitro_app"
        style="@style/card_inicio"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:layout_constraintVertical_bias="0.272">

    </android.support.design.card.MaterialCardView>

    <TextView
        android:id="@+id/text_registro_app"
        style="@style/ContentTextInicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="10dp"
        android:text="@string/registro_app"
        app:layout_constraintBottom_toBottomOf="@+id/card_regitro_app"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintTop_toTopOf="@+id/card_regitro_app" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginBottom="8dp"
        android:contentDescription="@string/inicio_uno" />

    <ImageView
        android:id="@+id/image_app"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"

        android:layout_marginBottom="4dp"
        android:contentDescription="@string/inicio_uno"
        android:elevation="@dimen/elevarion_card"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@+id/card_regitro_app"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/card_regitro_app"
        app:layout_constraintTop_toTopOf="@+id/card_regitro_app" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_regitro_app" />


    <!-- Card registro-->

    <TextView
        android:id="@+id/textView2"
        style="@style/ContentTextInicio"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/registro_crear_nueva_cuenta"
        app:layout_constraintBottom_toTopOf="@+id/guideline23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <android.support.design.card.MaterialCardView
        android:id="@+id/card_nuevo_registro"
        style="@style/card_inicio3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline23">

    </android.support.design.card.MaterialCardView>

    <TextView
        android:id="@+id/text_nueva_cuenta"
        style="@style/ContentTextInicio2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="@dimen/elevarion_card"
        android:text="@string/nueva_cuenta"
        app:layout_constraintBottom_toBottomOf="@+id/card_nuevo_registro"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintStart_toEndOf="@+id/image_avatar_cuatro"
        app:layout_constraintTop_toTopOf="@+id/card_nuevo_registro" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/inicio_uno"
        android:elevation="@dimen/elevarion_card"
        app:layout_constraintBottom_toBottomOf="@+id/card_nuevo_registro"
        app:layout_constraintEnd_toEndOf="@+id/card_nuevo_registro"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="@+id/card_nuevo_registro"
        app:srcCompat="@drawable/ic_keyboard_arrow_right_iron_dark_48dp" />

    <ImageView
        android:id="@+id/image_avatar_cuatro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/inicio_cuatro"
        android:elevation="@dimen/elevarion_card"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="@+id/card_nuevo_registro"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@+id/card_nuevo_registro"
        app:layout_constraintTop_toTopOf="@+id/card_nuevo_registro" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />



</android.support.constraint.ConstraintLayout>